# credFluence_Backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml
app/: main.py
app/core/: cache.py  config.py  database.py  dependencies.py  elastic.py  email.py  http_client.py  logging.py  middleware.py  oauth_state.py  redis.py  security.py
app/models/: __init__.py  activity_event.py  badge.py  bookmark.py  dispute.py  dispute_recipient.py  fraud_alert.py  notification.py  notification_preference.py  organization.py  organization_domain.py  organization_membership.py  platform_admin.py  profile.py  review.py  score_history.py  social_account.py  tag_aggregation.py  user.py
app/repositories/: bookmark_repo.py  dispute_repo.py  es_repo.py  notification_pref_repo.py  org_repo.py  profile_repo.py  social_account_repo.py  user_repo.py
app/routers/: admin.py  admin_auth.py  auth.py  bookmarks.py  claim.py  disputes.py  notifications.py  oauth.py  og.py  onboarding.py  profiles.py  reviews.py
app/schemas/: admin.py  admin_auth.py  auth.py  disputes.py  notifications.py  onboarding.py  reviews.py
app/services/: admin_service.py  dispute_service.py  oauth_service.py  onboarding_service.py  org_service.py  otp_service.py  profile_service.py  score_engine.py  storage_service.py
app/tasks/: badges.py  celery_app.py  es_sync.py  events.py  notifications.py  review_notifications.py  score.py
migrations/: env.py
migrations/versions/: 0001_init.py  19af77bf7ee4_add_social_accounts_table_refactor_.py  4173c1477241_merge_payment_fields_into_main.py  57d65a53273a_add_foreign_keys_to_all_models.py  a1b2c3d4e5f6_add_social_accounts_partial_index.py  a1b2c3d4e5f7_add_social_links_to_profiles.py  a86d6228bbc8_add_review_likes_and_comments.py  b38dc4f49200_initial_tables.py  (+21 more)
scripts/: cleanup_users.py  export_creators_csv.py  migrate_creators.py  reset_db.py  seed_admin.py
