[project]
name = "credfluence-backend"
version = "0.1.0"
description = "CredFluence API — trust/review platform for creators, agencies, and brands"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.2.0",

    # Auth / Security
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",

    # Redis
    "redis[hiredis]>=5.0.0",

    # Celery
    "celery[redis]>=5.4.0",

    # HTTP client (for OAuth, social scraping)
    "httpx>=0.27.0",

    # Storage (AWS S3)
    "boto3>=1.34.0",

    # Elasticsearch
    "elasticsearch[async]>=8.13.0,<9.0.0",

    # AI / OCR (Claude vision for evidence extraction)
    "anthropic>=0.40.0",

    # Email
    "aiosmtplib>=3.0.0",
    "sendgrid>=6.11.0",

    # Logging
    "structlog>=24.1.0",

    # Sentry (stub)
    "sentry-sdk[fastapi]>=2.0.0",

    # Utilities
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
